# PromptStrike-CLI

./: .gitignore  ARCHITECTURE.md  README.md  adversarial_metrics.json  pyproject.toml  report.json
examples/: sample_report.json  sample_target_config.yaml  vulnerable_prompt.txt
promptstrike/attacks/: base.py  generator.py  loader.py
promptstrike/attacks/builtin/: basic.yaml  exfiltration.yaml  indirect.yaml
promptstrike/cli/: dataset_builder.py  main.py
promptstrike/config/: loader.py  models.py
promptstrike/engine/: agent.py  indirect_runner.py  multi_turn_runner.py  runner.py  sast.py
promptstrike/evaluators/: base.py  guardrail_agent.py  llm_judge.py  regex_checks.py  rules.py
promptstrike/models/: attack.py  evaluation.py  report.py  response.py  result.py
promptstrike/reporters/: json_reporter.py  markdown.py  terminal.py
promptstrike/scoring/: benchmark.py  risk.py
promptstrike/targets/: base.py  http_api.py  interactive.py  ollama.py  openai_compatible.py  prompt_file.py
promptstrike/utils/: helpers.py  masking.py
tests/: test_attack_loader.py  test_evaluator.py  test_scoring.py
